Update resume links in CV and refine project descriptions for clarity

--- a/portfolio/IndigoNolan-Resume.tex
+++ b/portfolio/IndigoNolan-Resume.tex
@@ -122,9 +122,8 @@
       {University of Southampton}{Jan 2026}
       {Research Assistant}{Southampton, UK}
       \resumeItemListStart
-        \resumeItem{Engineered a data pipeline to map nighttime environments, integrating quantitative sensor data with qualitative metrics.}
+        \resumeItem{Collected data mapping  nighttime urban environments, integrating quantitative sensor data with qualitative metrics.}
         \resumeItem{Used hardware (luxmeters, GPS, spectrometers) to capture spatial light/color data, correlating it with user experience.}
-        \resumeItem{Developed a web-based visualization platform to render collected geospatial data for analysis.}
       \resumeItemListEnd
 
     \resumeSubheading
