add headnheart to cv

--- a/portfolio/IndigoNolan-Resume.tex
+++ b/portfolio/IndigoNolan-Resume.tex
@@ -168,6 +168,13 @@
         \resumeItem{Designed an interactive UI similar to "The Campaign Trail" to gamify democratic education.}
       \resumeItemListEnd
 
+
+    \resumeProjectHeading
+      {\textbf{Head and Heart} $|$ \emph{React, Convex, RESTful APIs}}{\href{https://headandheart.app}{headandheart.app}}
+      \resumeItemListStart
+        \resumeItem{Created a private media manager to track your favourite films, shows, books, board games, as a privacy and local-focused alternative to Letterboxd.}
+      \resumeItemListEnd
+
     \resumeProjectHeading
       {\textbf{Fantasteroids} $|$ \emph{Godot, Steamworks API, GDScript}}{\href{https://store.steampowered.com/app/1790870/Fantasteroids/}{Fantasteroids on Steam}}
       \resumeItemListStart
@@ -177,8 +184,7 @@
     \resumeProjectHeading
       {\textbf{ESA AstroPi Challenge} $|$ \emph{Python, OpenCV, NumPy}}{}
       \resumeItemListStart
-        \resumeItem{Wrote an image-processing algorithm deployed on the International Space Station to calculate cloud/land cover from orbit.}
-        \resumeItem{Processed 200+ images daily with high efficiency in a constrained hardware environment.}
+        \resumeItem{Wrote an image-processing algorithm deployed on the International Space Station to calculate cloud/land cover from orbit, processing 200+ images daily with high efficiency.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
