add related posts

--- a/_posts/2026-02-02-damaskus.md
+++ b/_posts/2026-02-02-damaskus.md
@@ -5,8 +5,7 @@ date: 2026-02-02 16:30:00 +0000
 author: Indigo Nolan
 permalink: /damaskus
 tags: 
-    - design
-    - project-updates
+    - projects
     - coding
 ---
 
